task: code reorg #71
